# rschat

./: Cargo.toml  README.md
src/: communication.rs  lib.rs  message.rs  nick.rs  sender.rs  viewer.rs
